# eve-fit-mcp

./: .env.example  .gitignore  .gitmodules  AGENT.md  README.md  pyproject.toml
.github/workflows/: release-binary.yml  release-staticdata.yml
src/eve_fit_mcp/: __init__.py  __main__.py  eos_bootstrap.py  fit_store.py  mutations.py  paths.py  report.py  server.py  state_map.py  staticdata.py  tools.py  typecheck.py
src/pyfa_mcp/: __init__.py  __main__.py  eos_bootstrap.py  errors.py  fit_store.py  mutations.py  paths.py  phobos_data.py  report.py  server.py  state_map.py  staticdata.py  tools.py  typecheck.py
tests/: conftest.py  test_report_smoke.py  test_staticdata_paths.py  test_tools_roundtrip.py
