[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eve-fit-mcp"
version = "0.1.0"
description = "MCP server wrapping the Eos EVE Online fitting engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
eve-fit-mcp = "eve_fit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eve_fit_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "eos"]

[tool.hatch.metadata]
allow-direct-references = true
