[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfa-mcp"
version = "0.1.0"
description = "Pyfa MCP — evaluate EVE Online ship fits via the Eos engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "theonlysinjin" }]
keywords = ["eve", "eve-online", "pyfa", "eos", "mcp", "fitting"]
dependencies = [
    "mcp>=1.0",
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pyfa-mcp = "pyfa_mcp.server:main"

[project.urls]
Homepage = "https://github.com/theonlysinjin/eve-fit-mcp"
Repository = "https://github.com/theonlysinjin/eve-fit-mcp"
Releases = "https://github.com/theonlysinjin/eve-fit-mcp/releases"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/eos/eos",
    "/README.md",
    "/AGENT.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfa_mcp"]

# Bundle the Eos engine so `uvx pyfa-mcp` / PyPI installs need no EOS_PACKAGE_PATH
[tool.hatch.build.targets.wheel.force-include]
"eos/eos" = "eos"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "eos"]

[tool.hatch.metadata]
allow-direct-references = true
